<?xml version="1.0"?>
<package>
  <name>acrobot_gazebo</name>
  <version>0.0.0</version>
  <description>The acrobot_gazebo package</description>

  <maintainer email="domingo.esteban@iit.it">Domingo Esteban</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/domingoesteban/robolearn_robots</url>

  <!-- Dependencies (catkin packages or system dependencies) -->
  <!-- Required packages at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->

  <!-- Build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Required packages at runtime: -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>acrobot_control</run_depend>
  <run_depend>acrobot_description</run_depend>
  <run_depend>xacro</run_depend>

  <!-- Required packages for testing: -->
  <!--   <test_depend>gtest</test_depend> -->


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
