<?xml version="1.0"?>
<package>
  <name>planar4dof_description</name>
  <version>0.0.0</version>
  <description>A planar4dof description package</description>

  <maintainer email="domingo.esteban@iit.it">Domingo Esteban</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
