<package>
  <name>planar4dof_gazebo</name>
  <version>0.1.0</version>
  <description>planar4dof_gazebo</description>
  <maintainer email="domingo.esteban@iit.it">Domingo Esteban</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>planar4dof_control</run_depend>
  <run_depend>planar4dof_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
